<resources>
    <string name="app_name">Lori Project</string>
    <string name="action_settings">Настройки</string>
    <string name="passwordText">Пароль</string>
    <string name="loginText">Логин</string>
    <string name="saveText">Сохранить</string>
    <string name="textPort">Порт</string>
    <string name="HostText">Хост</string>
    <string name="action_close_session">Закрыть сессию</string>
    <string name="remove_time_entry">Удалить</string>
    <string name="menu_add_time_entry">Добавить TimeEntry</string>
    <string name="menu_change_week">Открыть календарь</string>
    <string name="time_button">Задать время</string>
    <string name="text_time">время</string>
    <string name="date_button">Задать дату</string>
    <string name="text_date">дата</string>
    <string name="spinner_project">Выберите проект</string>
    <string name="spinner_task">Выберите задачу</string>
    <string name="update_text_button">Обновить</string>
    <string name="get_in_realm">Загрузить из бд</string>
    <string name="descriptionText">описание:</string>
    <string name="text_update">Обновить</string>
    <string name="toolbar_date">Выберите дату!</string>
    <string name="plus_btn"><![CDATA[<]]></string>
    <string name="minus_btn"><![CDATA[>]]></string>
    <string name="search_text">Поиск</string>
    <string name="spinner_tag">Выберите тег</string>
</resources>
