<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.timy.loriproject.activity.MainActivity">

    <item
        android:id="@+id/get_in_realm"
        android:icon="@android:drawable/arrow_down_float"
        android:title="@string/get_in_realm"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_calendar"
        android:icon="@drawable/ic_event_black_24dp"
        android:title="@string/menu_change_week"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_close_session"
        android:orderInCategory="100"
        android:title="@string/action_close_session"
        app:showAsAction="never" />
</menu>
